# eccat

./: Cargo.toml  LICENSE  README.md  build.rs  elo.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: evaluate.rs  movegen.rs
src/: egtb_download.rs  evaluate.rs  lib.rs  main.rs  oracle.rs  random_board.rs  search.rs  see.rs  tt.rs  uci.rs
testgen/: .gitignore  README.md  fens.txt  requirements.txt  testgen.py
