[package]
name = "eccat"
version = "0.2.0"
edition = "2021"
authors = ["skycloudd"]

[dependencies]
arrayvec = "0.7.4"
assert_size = "0.1.1"
chrono = { version = "0.4.38", default-features = false }
const-str = { version = "0.5.7", features = ["proc"] }
cozy-chess = "0.3.4"
crossbeam-channel = "0.5.13"
indicatif = { version = "0.17.8", features = ["rayon"], optional = true }
pdqsort = "1.0.3"
rayon = { version = "1.10.0", optional = true }
reqwest = { version = "0.12.5", features = ["blocking"], optional = true }
vampirc-uci = "0.11.1"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { version = "0.5.4", optional = true }

[profile.full]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[features]
default = ["jemalloc"]
egtb = ["dep:indicatif", "dep:rayon", "dep:reqwest"]
pext = ["cozy-chess/pext"]
jemalloc = ["dep:tikv-jemallocator"]

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.3.2", features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
