[package]
name = "eccat"
version = "0.2.0"
edition = "2021"
authors = ["skycloudd"]

[dependencies]
arrayvec = "0.7.6"
assert_size = "0.1.1"
chrono = { version = "0.4.38", default-features = false }
const-str = { version = "0.5.7", features = ["proc"] }
cozy-chess = "0.3.4"
crossbeam-channel = "0.5.13"
pdqsort = "1.0.3"
vampirc-uci = "0.11.1"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[profile.full]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
pext = ["cozy-chess/pext"]

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.3.2", features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
