[package]
name = "eccat"
version = "0.2.0"
edition = "2021"
authors = ["skycloudd"]

[dependencies]
arrayvec = "0.7.6"
assert_size = "0.1.1"
chrono = { version = "0.4.39", default-features = false }
const-str = { version = "0.5.7", features = ["proc"] }
cozy-chess = "0.3.4"
crossbeam-channel = "0.5.14"
pdqsort = "1.0.3"
vampirc-uci = "0.11.1"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[profile.full]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
pext = ["cozy-chess/pext"]

[build-dependencies]
anyhow = "1.0.95"
vergen = { version = "9.0.2", features = ["build", "rustc", "si"] }
vergen-git2 = "1.0.2"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
